# helter-skelter

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
assets/gog/: README.md
assets/scenarios/dev/: README.md
bridge/messages/fixtures/: ack.json  command_request_close_ride.json  command_request_hire_staff.json  command_request_open_ride.json  command_request_set_park_entry_fee.json  command_request_set_ride_price.json  command_result_error.json  command_result_ok.json  heartbeat.json  hello.json  observation_snapshot.json  shutdown.json
bridge/openrct2-plugin/: esbuild.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
bridge/openrct2-plugin/src/: commands.ts  config.ts  connection.ts  index.ts  observation.ts  pure.ts  uuid.ts
bridge/openrct2-plugin/test/: commands.test.js  plugin_mapping.test.js  protocol_roundtrip.test.js  smoke.test.js
bridge/protocol/: envelope.schema.json
bridge/protocol/commands/: close_ride.schema.json  hire_staff.schema.json  open_ride.schema.json  (+2 more)
config/: bridge.json  constitution-0.1.yaml
core/common/: Cargo.toml
core/common/src/protocol/: commands.rs  envelope.rs  error.rs  messages.rs  mod.rs
core/common/tests/: protocol_roundtrip.rs
core/governor/: Cargo.toml
core/orchestrator/: Cargo.toml
core/orchestrator/src/: config.rs  db.rs  error.rs  health.rs  lib.rs  main.rs  operator.rs  oscillation.rs  report.rs  snapshot.rs  startup.rs  state.rs  tcp_server.rs
core/world-model/: Cargo.toml
db/migrations/: 20260720215741_initial_schema.down.sql  20260720215741_initial_schema.up.sql  20260721021144_snapshots_tick_and_rollbacks.down.sql  20260721021144_snapshots_tick_and_rollbacks.up.sql  20260721152346_state_transitions.down.sql  20260721152346_state_transitions.up.sql  20260721152500_actions_tick.down.sql  20260721152500_actions_tick.up.sql
db/schema/: schema.sql
docs/: CODING_STANDARD.md  DECISIONS.md  OPENRCT2_INTEGRATION.md  PROTOCOL.md  ROADMAP.md  VISION.md
scripts/bootstrap/: setup-openrct2.sh
scripts/dev/: acceptance-0.1.sh  fake-orchestrator.js  run-headless.sh  run-stack.sh  snapshot.sh
tests/integration/: Cargo.toml
tests/integration/fixtures/: failing-snapshot.sh  fake-snapshot.sh
tests/integration/tests/: db_schema.rs  operator_slice.rs  orchestrator.rs  report.rs  rollback.rs  safety_state.rs  snapshot.rs
(+23 files in other folders)
