[package]
name = "common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["serde", "clock"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
thiserror = "2.0.19"
uuid = { version = "1.24.0", features = ["v7", "serde"] }

[dev-dependencies]
jsonschema = "0.48.1"
