[package]
name = "orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
world-model = { path = "../world-model" }
governor = { path = "../governor" }
tokio = { version = "1.53.1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "process", "fs"] }
axum = "0.8.9"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json", "env-filter"] }
serde_json = "1.0.151"
thiserror = "2.0.19"
uuid = { version = "1.24.0", features = ["serde", "v7"] }
serde = { version = "1.0.229", features = ["derive"] }
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "json", "uuid", "chrono"] }
chrono = { version = "0.4.45", default-features = false, features = ["serde", "clock"] }
clap = { version = "4.6.3", features = ["derive"] }
