[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
common = { path = "../../core/common" }
orchestrator = { path = "../../core/orchestrator" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
serde_json = "1"
