[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
common = { path = "../../core/common" }
orchestrator = { path = "../../core/orchestrator" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
serde_json = "1"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid"] }
uuid = { version = "1.24.0", features = ["v7", "serde"] }
